JumpScript/tests/baselines/reference/staticGetterAndSetter.errors.txt
tests/cases/compiler/staticGetterAndSetter.jump(2,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/staticGetterAndSetter.jump(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/staticGetterAndSetter.jump (2 errors) ====
    class Foo {
        static get Foo():number { return 0; }
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set Foo(n: number) {}
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    